Init dark theme

--- a/sass/components/card.scss
+++ b/sass/components/card.scss
@@ -8,7 +8,7 @@ $card-radius: 0.25rem !default;
 $card-header-background-color: transparent !default;
 $card-header-color: getVar("text-strong") !default;
 $card-header-padding: 0.75rem 1rem !default;
-$card-header-shadow: 0 0.125em 0.25em rgba($scheme-invert, 0.1) !default; // TODO
+$card-header-shadow: 0 0.125em 0.25em rgba(getVar("shadow-color-rgb"), 0.1) !default; // TODO
 $card-header-weight: getVar("weight-bold") !default;
 
 $card-content-background-color: transparent !default;
