--- a/sass/components/navbar.scss
+++ b/sass/components/navbar.scss
@@ -34,8 +34,8 @@ $navbar-dropdown-radius: getVar("radius-large") !default;
 $navbar-dropdown-z: 20 !default;
 
 $navbar-dropdown-boxed-radius: getVar("radius-large") !default;
-$navbar-dropdown-boxed-shadow: 0 8px 8px bulmaRgba($scheme-invert, 0.1),
-  0 0 0 1px bulmaRgba($scheme-invert, 0.1) !default;
+$navbar-dropdown-boxed-shadow: 0 8px 8px bulmargba(getVar("shadow-color-rgb"), 0.1),
+  0 0 0 1px bulmargba(getVar("shadow-color-rgb"), 0.1) !default;
 
 $navbar-dropdown-item-hover-color: getVar("scheme-invert") !default;
 $navbar-dropdown-item-hover-background-color: getVar("background") !default;
@@ -396,7 +396,7 @@ a.#{$class-prefix}navbar-item,
 
   .#{$class-prefix}navbar-menu {
     background-color: getVar("navbar-background-color");
-    box-shadow: 0 8px 16px bulmaRgba($scheme-invert, 0.1);
+    box-shadow: 0 8px 16px bulmargba(getVar("shadow-color-rgb"), 0.1);
     padding: 0.5rem 0;
 
     &.is-active {
@@ -415,7 +415,7 @@ a.#{$class-prefix}navbar-item,
       bottom: 0;
 
       &.has-shadow {
-        box-shadow: 0 -2px 3px bulmaRgba($scheme-invert, 0.1);
+        box-shadow: 0 -2px 3px bulmargba(getVar("shadow-color-rgb"), 0.1);
       }
     }
 
@@ -541,7 +541,7 @@ a.#{$class-prefix}navbar-item,
           getVar("navbar-dropdown-radius") 0 0;
         border-top: none;
         bottom: 100%;
-        box-shadow: 0 -8px 8px bulmaRgba($scheme-invert, 0.1);
+        box-shadow: 0 -8px 8px bulmargba(getVar("shadow-color-rgb"), 0.1);
         top: auto;
       }
     }
@@ -585,7 +585,7 @@ a.#{$class-prefix}navbar-item,
     border-bottom-left-radius: getVar("navbar-dropdown-radius");
     border-bottom-right-radius: getVar("navbar-dropdown-radius");
     border-top: getVar("navbar-dropdown-border-top");
-    box-shadow: 0 8px 8px bulmaRgba($scheme-invert, 0.1);
+    box-shadow: 0 8px 8px bulmargba(getVar("shadow-color-rgb"), 0.1);
     display: none;
     font-size: 0.875rem;
     @include ltr-position(0, false);
@@ -662,7 +662,7 @@ a.#{$class-prefix}navbar-item,
       bottom: 0;
 
       &.has-shadow {
-        box-shadow: 0 -2px 3px bulmaRgba($scheme-invert, 0.1);
+        box-shadow: 0 -2px 3px bulmargba(getVar("shadow-color-rgb"), 0.1);
       }
     }
 
