--- a/sass/utilities/mixins.scss
+++ b/sass/utilities/mixins.scss
@@ -314,7 +314,7 @@
 
   -moz-appearance: none;
   -webkit-appearance: none;
-  background-color: bulmaRgba($scheme-invert, 0.2);
+  background-color: bulmargba(getVar("shadow-color-rgb"), 0.2);
   border: none;
   border-radius: $radius-rounded;
   cursor: pointer;
@@ -357,11 +357,11 @@
 
   &:hover,
   &:focus {
-    background-color: bulmaRgba($scheme-invert, 0.3);
+    background-color: bulmargba(getVar("shadow-color-rgb"), 0.3);
   }
 
   &:active {
-    background-color: bulmaRgba($scheme-invert, 0.4);
+    background-color: bulmargba(getVar("shadow-color-rgb"), 0.4);
   }
 
   // Sizes
