--- a/sass/components/pagination.scss
+++ b/sass/components/pagination.scss
@@ -33,7 +33,7 @@ $pagination-current-border-color: getVar("link") !default;
 
 $pagination-ellipsis-color: getVar("grey-light") !default;
 
-$pagination-shadow-inset: inset 0 1px 2px rgba($scheme-invert, 0.2) !default;
+$pagination-shadow-inset: inset 0 1px 2px rgba(getVar("shadow-color-rgb"), 0.2) !default;
 
 :root {
   @include register-vars(
