--- a/sass/elements/box.scss
+++ b/sass/elements/box.scss
@@ -6,9 +6,9 @@ $box-radius: getVar("radius-large") !default;
 $box-shadow: getVar("shadow") !default;
 $box-padding: 1.25rem !default;
 
-$box-link-hover-shadow: 0 0.5em 1em -0.125em rgba($scheme-invert, 0.1),
+$box-link-hover-shadow: 0 0.5em 1em -0.125em rgba(getVar("shadow-color-rgb"), 0.1),
   0 0 0 1px getVar("link") !default;
-$box-link-active-shadow: inset 0 1px 2px rgba($scheme-invert, 0.2),
+$box-link-active-shadow: inset 0 1px 2px rgba(getVar("shadow-color-rgb"), 0.2),
   0 0 0 1px getVar("link") !default;
 
 :root {
