--- a/sass/components/modal.scss
+++ b/sass/components/modal.scss
@@ -2,7 +2,10 @@
 
 $modal-z: 40 !default;
 
-$modal-background-background-color: bulmargba(getVar("shadow-color-rgb"), 0.86) !default;
+$modal-background-background-color: bulmaRgba(
+  getVar("shadow-color-rgb"),
+  0.86
+) !default;
 
 $modal-content-width: 640px !default;
 $modal-content-margin-mobile: 20px !default;
