--- a/sass/layout/hero.scss
+++ b/sass/layout/hero.scss
@@ -95,7 +95,7 @@ $hero-colors: $colors !default;
             color: $color-invert;
 
             &:hover {
-              background-color: bulmargba(getVar("shadow-color-rgb"), 0.1);
+              background-color: bulmaRgba(getVar("shadow-color-rgb"), 0.1);
             }
           }
 
