--- a/docs/documentation/components/dropdown.html
+++ b/docs/documentation/components/dropdown.html
@@ -209,7 +209,7 @@ meta:
           <code>dropdown-trigger</code> the container for a <code>button</code>
         </li>
         <li>
-          <code>dropdown-menu</code> the toggable menu, <strong>hidden</strong> by default
+          <code>dropdown-menu</code> the toggleable menu, <strong>hidden</strong> by default
           <ul>
             <li>
               <code>dropdown-content</code> the dropdown <strong>box</strong>, with a white background and a shadow
@@ -241,7 +241,7 @@ meta:
 
 {% include elements/snippet.html content=dropdown_content_example %}
 
-{% include elements/anchor.html name="Hoverable or Toggable" %}
+{% include elements/anchor.html name="Hoverable or Toggleable" %}
 
 <div class="content">
   <p>
